tests/NormalTests/paczka2/big_fuzzy/53122920.err
Error in line 4: M01GQnYeKv S754 29,5
Error in line 5: M01GQnYeKv A76 79,2
Error in line 14: KHpji S754 182,4
Error in line 20: KHpji S257 41,7
Error in line 22: mJQjVj5 S702 352,3
Error in line 33: Drkou3JZ S257 70,9
Error in line 40: mJQjVj5 S257 19,4
Error in line 53: KHpji S257 51,1
Error in line 56: mJQjVj5 A76 99,3
Error in line 36: M01GQnYeKv S702 159,4
Error in line 58: KHpji S754 8,1
Error in line 77: KHpji S702 45,0
Error in line 86: KHpji S257 95,3
Error in line 68: mJQjVj5 S754 40,8
Error in line 88: mJQjVj5 S257 6,3
Error in line 92: WXfUN S257 3,7
Error in line 100: WXfUN A76 97,1
Error in line 96: mJQjVj5 A76 25,0
Error in line 102: mJQjVj5 S754 27,6
Error in line 104: M01GQnYeKv S702 51,9
Error in line 103: mJQjVj5 A76 59,7
Error in line 112: mJQjVj5 S754 0,0
Error in line 129: KHpji S702 32,2
Error in line 114: M01GQnYeKv A76 89,8
Error in line 137: M01GQnYeKv S257 50,5
Error in line 143: EQLJU9rQ3 S754 35,4
Error in line 148: A76 S702 96,98
Error in line 138: M01GQnYeKv A76 12,6
Error in line 141: KHpji A76 86,6
Error in line 156: A76 S702 37,8
Error in line 161: WXfUN S754 36,2
Error in line 160: A76 A76 60,3
Error in line 177: A76 S702 75,5
Error in line 181: A76 A76 28,6
Error in line 167: mJQjVj5 A76 7,0
Error in line 206: A76 S257 21,7
Error in line 214: Drkou3JZ A76 95,3
Error in line 225: Drkou3JZ S702 25,4
Error in line 222: WXfUN S257 68,5
Error in line 237: WXfUN S702 13,4
Error in line 241: WXfUN S754 28,2
Error in line 243: A76 S702 80,7
Error in line 244: A76 S257 88,9
